--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -73,16 +73,21 @@
                         android:textAlignment="center" android:textStyle="bold"
                         android:textColor="@android:color/white"/>
             </LinearLayout>
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="188dp" android:layout_weight="100" android:gravity="bottom">
-                <Button
-                        android:text="Leaderboard"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:id="@+id/leaderboardButton"
-                        style="@style/Widget.AppCompat.Button"/>
-            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent" android:gravity="bottom|center|center_vertical">
+            <Button
+                    android:text="Leaderboard"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/leaderboardButton"
+                    style="@style/Widget.AppCompat.Button.Borderless" android:textAlignment="center"
+                    android:gravity="center" android:foregroundGravity="center_vertical|center"/>
+            <ImageView
+                    android:src="@drawable/mario_pipe"
+                    android:layout_width="69dp"
+                    android:layout_height="88dp" android:id="@+id/leaderboardPipe" android:layout_gravity="center"/>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
