--- a/TicTacToe/app/src/main/res/drawable/rounded_background.xml
+++ b/TicTacToe/app/src/main/res/drawable/rounded_background.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#3C3C3C"/>
-
+    <solid android:color="#ffffff"/>
 
 
     <padding android:left="1dp"
@@ -9,6 +8,9 @@
              android:right="1dp"
              android:bottom="1dp"
     />
+
+    <stroke android:width="1dp"
+            android:color="#DDDDDD"></stroke>
 
     <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
              android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
