--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -64,21 +64,21 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:gravity="center"
                         android:background="@color/lightGrayBackground">
-                    <Button
+                    <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button1" android:tag="1"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
                             android:layout_margin="1dp" android:background="@android:color/background_light"
                             android:padding="1dp"/>
-                    <Button
+                    <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button2" android:tag="2"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
                             android:layout_margin="1dp" android:background="@android:color/background_light"
                             android:padding="1dp"/>
-                    <Button
+                    <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button3" android:tag="3"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
@@ -91,21 +91,21 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:gravity="center"
                         android:background="@color/lightGrayBackground">
-                    <Button
+                    <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button4" android:tag="4"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
                             android:layout_margin="1dp" android:background="@android:color/background_light"
                             android:padding="1dp"/>
-                    <Button
+                    <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button5" android:tag="5"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
                             android:layout_margin="1dp" android:background="@android:color/background_light"
                             android:padding="1dp"/>
-                    <Button
+                    <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button6" android:tag="6"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
@@ -118,21 +118,21 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:gravity="center"
                         android:background="@color/lightGrayBackground">
-                    <Button
+                    <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button7" android:tag="7"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
                             android:layout_margin="1dp" android:background="@android:color/background_light"
                             android:padding="1dp"/>
-                    <Button
+                    <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button8" android:tag="8"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
                             android:layout_margin="1dp" android:background="@android:color/background_light"
                             android:padding="1dp"/>
-                    <Button
+                    <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button9" android:tag="9"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
@@ -153,7 +153,7 @@
                     android:layout_height="36dp"
                     android:textAlignment="center" android:textStyle="bold" android:layout_marginBottom="16dp"
                     android:textSize="16sp" android:background="@drawable/rounded_background" android:gravity="center"
-                    android:textColor="@android:color/white"/>
+                    android:textColor="@color/colorPrimary"/>
             <Button
                     android:text="❙❙ Pause"
                     android:layout_width="100dp"
