--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+             xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainFragment">
@@ -52,11 +52,21 @@
                     android:layout_height="match_parent" android:background="@drawable/rounded_background"
                     android:layout_marginBottom="8dp" android:gravity="center" android:id="@+id/player2Box"
                     android:paddingBottom="16dp" android:paddingTop="16dp">
-                <ImageView
-                        android:src="@drawable/player_luigi"
-                        android:layout_width="42dp"
-                        android:layout_height="56dp" android:id="@+id/imageView"
-                        android:scaleType="centerInside"/>
+                <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" android:gravity="center">
+                    <ImageView
+                            android:src="@drawable/player_mario"
+                            android:layout_width="42dp"
+                            android:layout_height="56dp" android:id="@+id/imageView"
+                            android:scaleType="centerInside" android:layout_marginRight="6dp"/>
+                    <ImageView
+                            android:src="@drawable/player_luigi_flipped"
+                            android:layout_width="42dp"
+                            android:layout_height="56dp" android:id="@+id/imageView4"
+                            android:scaleType="centerInside" android:layout_marginLeft="6dp"/>
+                </LinearLayout>
                 <Space
                         android:layout_width="match_parent"
                         android:layout_height="13dp"/>
