--- a/TicTacToe/app/src/main/res/layout/fragment_players.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_players.xml
@@ -12,10 +12,11 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="32dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="128dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="128dp" android:padding="24dp" android:background="@android:color/white">
+                android:layout_marginStart="20dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="20dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="100dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="100dp" android:padding="24dp"
+                android:background="@drawable/rounded_background">
             <TextView
                     android:text="PLAYERS"
                     android:layout_width="match_parent"
