Flipped icon for Player 2 – the game now has a more battle-like feel

--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -155,7 +155,7 @@
                     android:textSize="16sp" android:background="@drawable/rounded_background" android:gravity="center"
                     android:textColor="@color/colorPrimary"/>
             <Button
-                    android:text="❙❙ Pause"
+                    android:text="❙❙"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content" android:id="@+id/pauseButton"/>
 
