--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -26,9 +26,9 @@
                     android:layout_marginBottom="10dp" android:gravity="center" android:id="@+id/player1Box"
                     android:paddingBottom="16dp" android:paddingTop="16dp">
                 <ImageView
-                        android:src="@drawable/player_mario"
-                        android:layout_width="42dp"
-                        android:layout_height="56dp" android:id="@+id/imageView"
+                        android:src="@drawable/mario_selected"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp" android:id="@+id/imageView"
                         android:scaleType="centerInside"/>
                 <Space
                         android:layout_width="match_parent"
@@ -42,7 +42,7 @@
                 <TextView
                         android:text="CPU"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="32sp"
+                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="24sp"
                         android:textAlignment="center" android:textStyle="bold"
                         android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
@@ -57,14 +57,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" android:gravity="center">
                     <ImageView
-                            android:src="@drawable/player_mario"
-                            android:layout_width="42dp"
-                            android:layout_height="56dp" android:id="@+id/imageView"
+                            android:src="@drawable/mario_selected"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" android:id="@+id/imageView"
                             android:scaleType="centerInside" android:layout_marginRight="6dp"/>
                     <ImageView
-                            android:src="@drawable/player_luigi_flipped"
-                            android:layout_width="42dp"
-                            android:layout_height="56dp" android:id="@+id/imageView4"
+                            android:src="@drawable/luigi_selected_flipped"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp" android:id="@+id/imageView4"
                             android:scaleType="centerInside" android:layout_marginLeft="6dp"/>
                 </LinearLayout>
                 <Space
@@ -79,7 +79,7 @@
                 <TextView
                         android:text="BATTLE"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="32sp"
+                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="24sp"
                         android:textAlignment="center" android:textStyle="bold"
                         android:textColor="@color/colorPrimaryDark"/>
             </LinearLayout>
