--- a/TicTacToe/app/src/main/res/drawable/rounded_background.xml
+++ b/TicTacToe/app/src/main/res/drawable/rounded_background.xml
@@ -10,7 +10,7 @@
     />
 
     <stroke android:width="1dp"
-            android:color="#DDDDDD"></stroke>
+            android:color="#E4E4E4"></stroke>
 
     <corners android:bottomRightRadius="7dp" android:bottomLeftRadius="7dp"
              android:topLeftRadius="7dp" android:topRightRadius="7dp"/>
