--- a/TicTacToe/app/src/main/res/layout/fragment_game.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_game.xml
@@ -64,74 +64,74 @@
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:gravity="center"
-                        android:background="@color/cfdialog_neutral_button_color">
+                        android:background="@color/colorPrimary">
                     <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button1" android:tag="1"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
-                            android:scaleType="centerInside" android:layout_marginRight="1dp"
-                            android:layout_marginBottom="1dp" android:background="@color/lightGrayBackground"/>
+                            android:scaleType="centerInside" android:layout_marginRight="2dp"
+                            android:layout_marginBottom="2dp" android:background="@color/lightGrayBackground"/>
                     <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button2" android:tag="2"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
-                            android:scaleType="centerInside" android:layout_marginBottom="1dp"
-                            android:layout_marginRight="1dp" android:background="@color/lightGrayBackground"/>
+                            android:scaleType="centerInside" android:layout_marginBottom="2dp"
+                            android:layout_marginRight="2dp" android:background="@color/lightGrayBackground"/>
                     <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button3" android:tag="3"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
-                            android:scaleType="centerInside" android:layout_marginBottom="1dp"
+                            android:scaleType="centerInside" android:layout_marginBottom="2dp"
                             android:background="@color/lightGrayBackground"/>
                 </LinearLayout>
                 <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:gravity="center"
-                        android:background="@color/cfdialog_neutral_button_pressed_color">
+                        android:background="@color/colorPrimary">
                     <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button4" android:tag="4"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
-                            android:scaleType="centerInside" android:layout_marginBottom="1dp"
-                            android:layout_marginRight="1dp" android:background="@color/lightGrayBackground"/>
+                            android:scaleType="centerInside" android:layout_marginBottom="2dp"
+                            android:layout_marginRight="2dp" android:background="@color/lightGrayBackground"/>
                     <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button5" android:tag="5"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
-                            android:scaleType="centerInside" android:layout_marginRight="1dp"
-                            android:layout_marginBottom="1dp" android:background="@color/lightGrayBackground"/>
+                            android:scaleType="centerInside" android:layout_marginRight="2dp"
+                            android:layout_marginBottom="2dp" android:background="@color/lightGrayBackground"/>
                     <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button6" android:tag="6"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
-                            android:scaleType="centerInside" android:layout_marginBottom="1dp"
+                            android:scaleType="centerInside" android:layout_marginBottom="2dp"
                             android:background="@color/lightGrayBackground"/>
                 </LinearLayout>
                 <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:gravity="center"
-                        android:background="@color/cfdialog_neutral_button_pressed_color">
+                        android:background="@color/colorPrimary">
                     <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button7" android:tag="7"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
-                            android:scaleType="centerInside" android:layout_marginRight="1dp"
+                            android:scaleType="centerInside" android:layout_marginRight="2dp"
                             android:background="@color/lightGrayBackground"/>
                     <ImageButton
                             android:layout_width="90dp"
                             android:layout_height="90dp" android:id="@+id/button8" android:tag="8"
                             style="@style/Widget.AppCompat.Button.Borderless" android:textSize="30sp"
                             android:textStyle="bold" android:textColor="@color/colorPrimaryDark"
-                            android:scaleType="centerInside" android:layout_marginRight="1dp"
+                            android:scaleType="centerInside" android:layout_marginRight="2dp"
                             android:background="@color/lightGrayBackground"/>
                     <ImageButton
                             android:layout_width="90dp"
