--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -9,12 +9,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:background="@color/lightGrayBackground">
         <TextView
-                android:text="super ttt"
                 android:layout_width="match_parent"
                 android:layout_height="136dp" android:id="@+id/textView" android:textStyle="bold"
                 android:textSize="32sp" android:textAlignment="center" android:textColor="@android:color/black"
                 android:gravity="center" android:fontFamily="@font/super_mario_font" android:layout_marginLeft="80dp"
-                android:layout_marginRight="80dp"/>
+                android:layout_marginRight="80dp" android:text="@string/app_name_styled"/>
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -38,7 +37,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textView3"
                         android:textAlignment="center" android:textStyle="bold"
-                        android:textColor="@color/colorPrimaryDark"/>
+                        android:textColor="@color/colorPrimaryDark" android:typeface="normal"
+                />
                 <TextView
                         android:text="CPU"
                         android:layout_width="match_parent"
@@ -89,12 +89,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent" android:gravity="bottom|center|center_vertical">
             <Button
-                    android:text="Leaderboards"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" android:id="@+id/leaderboardButton"
                     style="@style/Widget.AppCompat.Button.Borderless" android:textAlignment="center"
                     android:gravity="center" android:foregroundGravity="center_vertical|center"
-                    android:textSize="13sp"/>
+                    android:textSize="13sp" android:text="@string/leaderboards"/>
             <ImageView
                     android:src="@drawable/mario_pipe"
                     android:layout_width="69dp"
