UI, UI, UI everywhere

--- a/TicTacToe/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_leaderboard.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".LeaderboardFragment">
@@ -10,6 +10,14 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+        <ImageView
+                android:src="@drawable/mario_pipe_flipped"
+                android:layout_width="match_parent"
+                android:layout_height="69dp" android:id="@+id/backButtonPipe"/>
+        <TextView
+                android:text="Back"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/backButtonText" android:textAlignment="center"/>
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="42dp"
