--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainFragment">
@@ -8,12 +8,21 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:background="@color/lightGrayBackground">
-        <TextView
+        <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="136dp" android:id="@+id/textView" android:textStyle="bold"
-                android:textSize="32sp" android:textAlignment="center" android:textColor="@android:color/black"
-                android:gravity="center" android:fontFamily="@font/super_mario_font" android:layout_marginLeft="80dp"
-                android:layout_marginRight="80dp" android:text="@string/app_name_styled"/>
+                android:layout_height="wrap_content">
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="136dp" android:id="@+id/textView" android:textStyle="bold"
+                    android:textSize="32sp" android:textAlignment="center" android:textColor="@android:color/black"
+                    android:gravity="center" android:fontFamily="@font/super_mario_font"
+                    android:text="@string/app_name_styled"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+        </android.support.constraint.ConstraintLayout>
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -25,26 +34,26 @@
                     android:layout_marginBottom="10dp" android:gravity="center" android:id="@+id/player1Box"
                     android:paddingBottom="16dp" android:paddingTop="16dp">
                 <ImageView
-                        android:src="@drawable/mario_selected"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp" android:id="@+id/imageView"
+                        android:src="@drawable/player_mario"
+                        android:layout_width="46dp"
+                        android:layout_height="46dp" android:id="@+id/imageView"
                         android:scaleType="centerInside"/>
                 <Space
                         android:layout_width="match_parent"
-                        android:layout_height="13dp"/>
+                        android:layout_height="16dp"/>
                 <TextView
                         android:text="1 PLAYER"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textView3"
                         android:textAlignment="center" android:textStyle="bold"
                         android:textColor="@color/colorPrimaryDark" android:typeface="normal"
-                />
+                        android:textSize="18sp"/>
                 <TextView
                         android:text="CPU"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="24sp"
-                        android:textAlignment="center" android:textStyle="bold"
-                        android:textColor="@color/colorPrimaryDark"/>
+                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="14sp"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/tertiary_text_light"/>
             </LinearLayout>
             <LinearLayout
                     android:orientation="vertical"
@@ -57,31 +66,31 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" android:gravity="center">
                     <ImageView
-                            android:src="@drawable/mario_selected"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp" android:id="@+id/imageView"
+                            android:src="@drawable/player_mario"
+                            android:layout_width="46dp"
+                            android:layout_height="46dp" android:id="@+id/imageView"
                             android:scaleType="centerInside" android:layout_marginRight="6dp"/>
                     <ImageView
-                            android:src="@drawable/luigi_selected_flipped"
-                            android:layout_width="50dp"
-                            android:layout_height="50dp" android:id="@+id/imageView4"
+                            android:src="@drawable/player_luigi_flipped"
+                            android:layout_width="46dp"
+                            android:layout_height="46dp" android:id="@+id/imageView4"
                             android:scaleType="centerInside" android:layout_marginLeft="6dp"/>
                 </LinearLayout>
                 <Space
                         android:layout_width="match_parent"
-                        android:layout_height="13dp"/>
+                        android:layout_height="16dp"/>
                 <TextView
                         android:text="2 PLAYER"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textView3"
                         android:textAlignment="center" android:textStyle="bold"
-                        android:textColor="@color/colorPrimaryDark"/>
+                        android:textColor="@color/colorPrimaryDark" android:textSize="18sp"/>
                 <TextView
                         android:text="BATTLE"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="24sp"
-                        android:textAlignment="center" android:textStyle="bold"
-                        android:textColor="@color/colorPrimaryDark"/>
+                        android:layout_height="wrap_content" android:id="@+id/textView4" android:textSize="14sp"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/tertiary_text_light"/>
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
