Selecting game mode on the start screen now works

--- a/TicTacToe/app/src/main/res/layout/fragment_players.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_players.xml
@@ -40,8 +40,8 @@
             <Switch
                     android:text="Play against CPU"
                     android:layout_width="match_parent"
-                    android:layout_height="45dp" android:id="@+id/aiSwitch" android:textOn="CPU Enabled"
-                    android:textOff="CPU Disabled" android:textStyle="bold"/>
+                    android:layout_height="60dp" android:id="@+id/aiSwitch" android:textOn="CPU Enabled"
+                    android:textOff="CPU Disabled" android:textStyle="bold" android:textSize="18sp"/>
             <Button
                     android:text="Start"
                     android:layout_width="match_parent"
