--- a/TicTacToe/app/src/main/res/layout/fragment_main.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_main.xml
@@ -35,8 +35,8 @@
                     android:paddingBottom="16dp" android:paddingTop="16dp">
                 <ImageView
                         android:src="@drawable/player_mario"
-                        android:layout_width="46dp"
-                        android:layout_height="46dp" android:id="@+id/imageView"
+                        android:layout_width="44dp"
+                        android:layout_height="44dp" android:id="@+id/imageView"
                         android:scaleType="centerInside"/>
                 <Space
                         android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                         android:layout_height="wrap_content" android:id="@+id/textView3"
                         android:textAlignment="center" android:textStyle="bold"
                         android:textColor="@color/colorPrimaryDark" android:typeface="normal"
-                        android:textSize="18sp"/>
+                        android:textSize="22sp"/>
                 <TextView
                         android:text="CPU"
                         android:layout_width="match_parent"
@@ -67,14 +67,14 @@
                         android:layout_height="match_parent" android:gravity="center">
                     <ImageView
                             android:src="@drawable/player_mario"
-                            android:layout_width="46dp"
-                            android:layout_height="46dp" android:id="@+id/imageView"
-                            android:scaleType="centerInside" android:layout_marginRight="6dp"/>
+                            android:layout_width="44dp"
+                            android:layout_height="44dp" android:id="@+id/imageView"
+                            android:scaleType="centerInside" android:layout_marginRight="4dp"/>
                     <ImageView
                             android:src="@drawable/player_luigi_flipped"
-                            android:layout_width="46dp"
-                            android:layout_height="46dp" android:id="@+id/imageView4"
-                            android:scaleType="centerInside" android:layout_marginLeft="6dp"/>
+                            android:layout_width="44dp"
+                            android:layout_height="44dp" android:id="@+id/imageView4"
+                            android:scaleType="centerInside" android:layout_marginLeft="4dp"/>
                 </LinearLayout>
                 <Space
                         android:layout_width="match_parent"
@@ -84,7 +84,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" android:id="@+id/textView3"
                         android:textAlignment="center" android:textStyle="bold"
-                        android:textColor="@color/colorPrimaryDark" android:textSize="18sp"/>
+                        android:textColor="@color/colorPrimaryDark" android:textSize="22sp"/>
                 <TextView
                         android:text="BATTLE"
                         android:layout_width="match_parent"
@@ -105,8 +105,9 @@
                     android:textSize="13sp" android:text="@string/leaderboards"/>
             <ImageView
                     android:src="@drawable/mario_pipe"
-                    android:layout_width="69dp"
-                    android:layout_height="87dp" android:id="@+id/leaderboardPipe" android:layout_gravity="center"/>
+                    android:layout_width="70dp"
+                    android:layout_height="88dp" android:id="@+id/leaderboardPipe" android:layout_gravity="center"
+                    android:scaleType="fitEnd"/>
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
