--- a/TicTacToe/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_leaderboard.xml
@@ -9,20 +9,23 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" android:background="@color/lightGrayBackground">
         <ImageView
                 android:src="@drawable/mario_pipe_flipped"
                 android:layout_width="match_parent"
                 android:layout_height="69dp" android:id="@+id/backButtonPipe"/>
         <TextView
-                android:text="Back"
+                android:text="CLOSE"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/backButtonText" android:textAlignment="center"/>
+                android:layout_height="30dp" android:id="@+id/backButtonText" android:textAlignment="center"
+                android:layout_marginTop="6dp" android:letterSpacing="0.1" android:textSize="11sp"
+                android:textStyle="bold"/>
         <TextView
                 android:layout_width="match_parent"
-                android:layout_height="42dp"
-                android:text="Leaderboards" android:textSize="22sp" android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"/>
+                android:layout_height="52dp"
+                android:text="leaderboards" android:textSize="22sp" android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark" android:textAlignment="center"
+                android:fontFamily="@font/super_mario_font"/>
         <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
