Yay: the leaderboards menu now displays high scores (who are hardcoded, by the way)

--- a/TicTacToe/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/TicTacToe/app/src/main/res/layout/fragment_leaderboard.xml
@@ -28,7 +28,7 @@
                 android:fontFamily="@font/super_mario_font"/>
         <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" android:id="@+id/leaderboardsRecyclerView"/>
     </LinearLayout>
 
 </FrameLayout>
