--- a/TicTacToe/app/src/main/res/layout/leaderboard_list_item.xml
+++ b/TicTacToe/app/src/main/res/layout/leaderboard_list_item.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="140dp">
+                                             android:layout_height="70dp">
 
     <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="395dp"
-            android:layout_height="715dp" tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp">
+            android:layout_height="70dp"
+            android:gravity="center" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
         <TextView
                 android:text="PLAYER_NAME"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/playerNameField"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/playerNameField" android:textSize="16sp"
+                android:textStyle="bold" android:layout_weight="1" android:layout_marginRight="16dp"
+                android:textColor="@android:color/black"/>
         <TextView
-                android:text="PLAYER_SCORE"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/playerScoreField"/>
+                android:text="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/playerScoreField" android:textSize="16sp"
+                android:textStyle="bold" android:textAlignment="center" android:layout_marginRight="20dp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/cfdialog_positive_button_background_drawable" android:paddingLeft="10dp"
+                android:paddingRight="10dp" android:layout_weight="1"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
